fixed the build to run unit test of bitcoinj as it make no sense to not run them: we need to detect that their master is broken

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ language: java
 jdk: oraclejdk8
 install: true # remove default
 before_script:
+  # TODO TBD we are building against main tree? not our modified version of bitcoinj
   - git clone https://github.com/bitcoinj/bitcoinj.git
   - cd bitcoinj
-  - mvn -q install -DskipTests=true
+  - mvn -q install
   - cd ..
 script:
   - mvn -q clean package
