--- a/core/pom.xml
+++ b/core/pom.xml
@@ -64,6 +64,13 @@
         </profile>
     </profiles>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -88,9 +95,9 @@
             <version>1.4.0</version>
         </dependency>
         <dependency>
-            <groupId>org.bitcoinj</groupId>
+            <groupId>com.github.bitsquare.bitcoinj</groupId>
             <artifactId>bitcoinj-core</artifactId>
-            <version>0.14.4.2</version>
+            <version>bisq_0.14.4.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <properties>
