Replace snapshot versions of bitcoinj dep with fixed SHA
See bitsquare/bitsquare#898

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -97,7 +97,7 @@
         <dependency>
             <groupId>com.github.bitsquare.bitcoinj</groupId>
             <artifactId>bitcoinj-core</artifactId>
-            <version>bisq_0.14.4.1-SNAPSHOT</version>
+            <version>519caad6</version>
         </dependency>
     </dependencies>
     <properties>
