--- a/core/pom.xml
+++ b/core/pom.xml
@@ -95,9 +95,13 @@
             <version>1.4.0</version>
         </dependency>
         <dependency>
-            <groupId>com.github.bisq-network.bitcoinj</groupId>
+            <!-- <groupId>com.github.bisq-network.bitcoinj</groupId> -->
+            <groupId>com.github.sqrrm.bitcoinj</groupId>
             <artifactId>bitcoinj-core</artifactId>
-            <version>cd30ad5b</version>
+            <!-- <version>cd30ad5b</version> -->
+            <version>3deef08</version>
+            <!-- <scope>system</scope>
+            <systemPath>/home/sqrrm/bisq/bisq/bitcoinj/core/target/bitcoinj-core-0.14.4.11.jar</systemPath> -->
         </dependency>
     </dependencies>
     <properties>
